[gd_scene load_steps=21 format=3 uid="uid://drped672xucwt"]

[ext_resource type="Script" uid="uid://dam565bs3jv77" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Shader" uid="uid://tkj6jmy36j86" path="res://pause_menu.gdshader" id="1_n87rw"]
[ext_resource type="Script" uid="uid://buwusedhvutqa" path="res://scripts/audio_control.gd" id="3_5d2l8"]
[ext_resource type="Script" uid="uid://bbr77jfo5ftvn" path="res://scripts/fullscreen_control.gd" id="4_7l7mv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_myx47"]
shader = ExtResource("1_n87rw")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kukqi"]
bg_color = Color(11.98903, 10.994683, 14.806348, 0.15686275)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d2l8"]
bg_color = Color(0.8, 0.7294118, 1, 0.26666668)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7l7mv"]
bg_color = Color(0.5882353, 0.5294118, 0.7490196, 0.15686275)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4r4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1s2dm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88e76"]

[sub_resource type="Animation" id="Animation_kukqi"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.800000038]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5d2l8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7l7mv"]
_data = {
&"RESET": SubResource("Animation_5d2l8"),
&"blur": SubResource("Animation_kukqi")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4r4p"]
bg_color = Color(0.81982845, 0.7712352, 0.81982845, 0.19215687)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s2dm"]
bg_color = Color(11.98903, 10.994683, 14.806348, 0.15686275)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88e76"]
bg_color = Color(0.5882353, 0.5294118, 0.7490196, 0.15686275)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knqa7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_71k7c"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmnsq"]
bg_color = Color(0.5983269, 0.63795793, 3.85046e-07, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_myx47")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -163.0
offset_right = 314.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_kukqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5d2l8")
theme_override_styles/hover = SubResource("StyleBoxFlat_7l7mv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v4r4p")
text = "Resume"

[node name="options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_kukqi")
theme_override_styles/hover = SubResource("StyleBoxFlat_7l7mv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1s2dm")
text = "Options"

[node name="exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_kukqi")
theme_override_styles/hover = SubResource("StyleBoxFlat_7l7mv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_88e76")
text = "Exit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7l7mv")
}

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 308.0
offset_top = -185.0
offset_right = 841.0
offset_bottom = 212.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v4r4p")

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.112
anchor_right = 0.497
anchor_bottom = 0.112
offset_left = -120.901
offset_top = -24.464
offset_right = 100.099
offset_bottom = 56.536
theme_override_font_sizes/font_size = 28
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="Options"]
layout_mode = 0
offset_left = 108.0
offset_top = 337.0
offset_right = 417.0
offset_bottom = 382.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_1s2dm")
theme_override_styles/hover = SubResource("StyleBoxFlat_88e76")
theme_override_styles/focus = SubResource("StyleBoxEmpty_knqa7")
text = "Back
"

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -59.5
offset_right = 213.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="AudioControl" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_71k7c")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cmnsq")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_cmnsq")
max_value = 1.0
step = 0.05
script = ExtResource("3_5d2l8")
audio_bus_name = "Music"

[node name="FullscreenControl" type="CheckButton" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"
script = ExtResource("4_7l7mv")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/AudioControl" to="Options/VBoxContainer/HBoxContainer/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/FullscreenControl" to="Options/VBoxContainer/FullscreenControl" method="_on_toggled"]
